--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-themes": "^0.4.4",
+    "razorpay": "^2.9.5",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.27.0",
     "remotion": "4.0.225",
     "replicate": "^1.0.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.2"
